--- a/css/dex-custom.css
+++ b/css/dex-custom.css
@@ -117,7 +117,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand img {
-    max-width: 150px;
+    max-height: 50px;
 }
 
 #mainNav .navbar-toggler {
@@ -191,7 +191,7 @@ img::-moz-selection {
     #mainNav.is-fixed {
         /* when the user scrolls down, we hide the header right above the viewport */
         position: fixed;
-        top: -60px;
+        top: -66px;
         transition: transform 0.2s;
         background-color: rgba(37, 44, 64, 1);
         padding: .5rem 1em;
@@ -563,7 +563,7 @@ header.masthead .site-heading .subheading {
 }
 
 .footer-logo img {
-    max-width: 200px;
+    max-height: 60px;
 }
 
 .social-list li a {
