--- a/css/dex-custom.css
+++ b/css/dex-custom.css
@@ -191,7 +191,7 @@ img::-moz-selection {
     #mainNav.is-fixed {
         /* when the user scrolls down, we hide the header right above the viewport */
         position: fixed;
-        top: -66px;
+        top: -54px;
         transition: transform 0.2s;
         background-color: rgba(37, 44, 64, 1);
         padding: .5rem 1em;
@@ -227,7 +227,18 @@ header.masthead {
     background-size: cover;
     min-height: 100vh;
 }
-
+.visual-chart {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    text-align: right;
+}
+.visual-chart img {
+    height: 100%;
+}
 header.masthead .site-heading {
     padding: 80px 0 40px;
     color: white;
@@ -281,10 +292,16 @@ header.masthead .site-heading .subheading {
 .common-preview .common-meta {
     margin: 0 15px 0 0;
     color: #868e96;
+    font-size: 15px;
 }
 
 .common-preview .common-link {
     color: #004EA4;
+    font-size: 16px;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 992px) {
