--- a/css/dex-custom.css
+++ b/css/dex-custom.css
@@ -235,6 +235,7 @@ header.masthead {
     height: 100%;
     z-index: 0;
     text-align: right;
+    overflow: hidden;
 }
 .visual-chart img {
     height: 100%;
@@ -242,6 +243,8 @@ header.masthead {
 header.masthead .site-heading {
     padding: 80px 0 40px;
     color: white;
+    position: relative;
+    z-index: 9;
 }
 
 header.masthead .site-heading h1 {
