--- a/css/dex-custom.css
+++ b/css/dex-custom.css
@@ -280,7 +280,9 @@ header.masthead .site-heading .subheading {
         font-size: 16px;
     }
 }
-
+.inner-box .common-title {
+    line-height: 1;
+}
 .common-preview .common-title {
     font-size: 28px;
     margin: 0;
@@ -305,8 +307,16 @@ header.masthead .site-heading .subheading {
 
 .cursor-pointer {
     cursor: pointer;
+    font-weight: bold;
+    color: #212529;
+    text-decoration: underline;
+    opacity: .7;
 }
-
+.cursor-pointer.collapsed {
+    text-decoration: none;
+    color: #004EA4;
+    opacity: 1;
+}
 @media only screen and (min-width: 992px) {
     .common-preview .common-title {
         font-size: 40px;
