--- a/css/dex-custom.css
+++ b/css/dex-custom.css
@@ -550,8 +550,9 @@ header.masthead .site-heading .subheading {
 
 /**/
 .tmp-title-large {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
+    line-height: 1.3;
 }
 
 .tmp-title-medium {
